--- a/회고록.md
+++ b/회고록.md
@@ -28,16 +28,33 @@
     ```php
     $filtered_dept = mysqli_real_escape_string($link, $_GET['department']);
     ```
+    * `dept_emp`테이블과 `employees`테이블을 LEFT JOIN한 것을 다시 `departments`테이블과 LEFT JOIN함.
+    ```php
+    $query = "
+        SELECT dept_name, first_name, last_name
+        FROM (
+        SELECT first_name, last_name, dept_no FROM dept_emp LEFT JOIN employees ON dept_emp.emp_no = employees.emp_no 
+        ) AS d
+        LEFT JOIN departments 
+        ON d.dept_no = departments.dept_no
+        WHERE departments.dept_no = '{$filtered_dept}'
+    ";
+    ```
 
 ## 1. 새로 배운 내용
+* JOIN
+    * JOIN은 두 개 이상의 테이블을 연결하여 데이터를 검색하는 방법임. 여러 개의 테이블을 합쳐 마치 하나의 테이블처럼 결과를 만들어냄.
+    * 보통 테이블들을 연결할 때는 PRIMARY KEY나 FOREIGN KEY를 이용하여 연결함.
+    * 따라서 테이블들 사이에는 적어도 하나 이상의 공통된 컬럼이 존재하고 있어야함.
+    * INNER JOIN, LEFT JOIN, RIGHT JOIN 등의 종류가 있음.
 
 ## 2. 발생한 문제 & 해결 과정
-* 
+* 특별히 발생한 문제는 없었음.
 
 ## 3. 참고할 만한 내용
-* 
+* https://gist.github.com/ninanung/2b81a5db946c26c98c573e3662a92b62
 
 ## 4. 회고
-* (-) 
-* (+) 
-* (!) 
+* (-) 페이징 구현해보고 싶었는데 아직 못함.
+* (+) 이번주에는 부지런하게 강의 듣고 정리도 함.
+* (!) 기본적인 php에 익숙해진 것 같아 책을 하나 사서 조금 더 잘 공부해보고 싶어짐.
